[package]
name = "fnmutant"
version = "0.1.0"
authors = ["matt rice <ratmice@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ratmice/fnmutant"
description = "A mutant closure Fn(&mut ...)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
